--- a/_jekyll/_includes/head.html
+++ b/_jekyll/_includes/head.html
@@ -6,6 +6,10 @@
   <meta name="author" content="{{ site.author.name }}" />
   <meta name="copyright" content="{{ site.copyright }}"/>
 
+  <!--[if lt IE 9]>
+    <script src="/js/html5shiv.js"></script>
+  <![endif]-->
+
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css" />
