Update foundation to 6.3.0, more Jekyll improvements copied from FPC

--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -1,6 +1,33 @@
-    <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
-    <script src="{{ site.baseurl }}/js/foundation.js"></script>
-    <script src="{{ site.baseurl }}/js/app.js"></script>
+<footer>
+  <div class="row">
+    <div class="columns large-2 medium-3">
+      LOGO
+    </div>
+    <div class="columns large-5 medium-9">
+      INFO
+    </div>
+    <div class="columns large-5 medium-6">
+      SOCIAL STUFF
 
-  </body>
-</html>
+    </div>
+  </div>
+
+  <br/>
+  <br/>
+
+  <div class="row">
+    <div class="columns large-offset-2 large-10 medium-9 medium-offset-3">
+
+      <nav>
+        See Also:<br/>
+        LINKS
+      </nav>
+
+    </div>
+
+  </div>
+</footer>
+
+<script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+<script src="{{ site.baseurl }}/js/foundation.js"></script>
+<script src="{{ site.baseurl }}/js/app.js"></script>
