--- a/_jekyll/_includes/header.html
+++ b/_jekyll/_includes/header.html
@@ -1,7 +1,5 @@
-<!doctype html>
-<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
-<html lang="en">
-  <head>
-    {% include head.html %}
-  </head>
-  <body>
+      <h1><i class="fa fa-first-order"></i> {{ site.title }}</h1>
+
+      <p>
+        {{ site.site_description }}
+      </p>
