--- a/scss/app.scss
+++ b/scss/app.scss
@@ -48,3 +48,8 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+@import 'global';
+@import 'pages';
+@import 'homepage';
+@import 'blog';
