Big Version 1.1 update!

--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -1,33 +1,46 @@
 <footer>
   <div class="row">
     <div class="columns large-2 medium-3">
-      LOGO
+      <img src="/assets/jekyll-logo.png" alt="" style="width:118px;opacity:0.5" />
     </div>
-    <div class="columns large-5 medium-9">
-      INFO
-    </div>
-    <div class="columns large-5 medium-6">
-      SOCIAL STUFF
+    <div class="columns large-10 medium-9">
+      <br/>
 
+      <nav>
+        <ul>
+          <li><a href="/#">Secondary Link 1</a></li>
+          <li><a href="/#">Link 2</a></li>
+          <li><a href="/#">Link 3</a></li>
+          <li><a href="/#">Link 4</a></li>
+        </ul>
+      </nav>
     </div>
   </div>
 
   <br/>
-  <br/>
 
   <div class="row">
-    <div class="columns large-offset-2 large-10 medium-9 medium-offset-3">
+    <div class="columns large-offset-2 large-8 medium-6 medium-offset-3">
 
-      <nav>
-        See Also:<br/>
-        LINKS
-      </nav>
+      <p>
+        Whitefusion<br/>
+        12345 NW Anywhere Ave<br/>
+        Portland, OR 97124
+        <br/>
+        <br/>
+        <small>Copyright © 2017 Whitefusion<br/>
+        Photography by Jared White</small>
+      </p>
 
+    </div>
+
+    <div class="columns large-2 medium-3">
+      <p>Find us on:</p>
+
+      <div><a href="https://www.facebook.com/whitefusionfoundry/" target="_blank">&nbsp;<i class="fa fa-facebook" aria-hidden="true"></i>&nbsp; <strong>Facebook</strong></a></div>
+
+      <div style="margin-top:0.5em"><a href="https://twitter.com/_whitefusion/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> <strong>Twitter</strong></a></div>
     </div>
 
   </div>
 </footer>
-
-<script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
-<script src="{{ site.baseurl }}/js/foundation.js"></script>
-<script src="{{ site.baseurl }}/js/app.js"></script>
