--- a/_jekyll/_includes/header.html
+++ b/_jekyll/_includes/header.html
@@ -1,5 +1,24 @@
-      <h1><i class="fa fa-first-order"></i> {{ site.title }}</h1>
+<header class="top">
 
-      <p>
-        {{ site.site_description }}
-      </p>
+  <nav>
+    <a href="/"><img src="/assets/jekyll-logo.png" style="width: 200px" alt="Website Logo" /></a>
+
+    <ul>
+      <li><a href="/#">Link 1</a></li>
+      <li><a href="/#">Link 2</a></li>
+      <li><a href="/#">Link 3</a></li>
+      <li><a href="/about">About</a></li>
+    </ul>
+  </nav>
+
+</header>
+{% if page.hero %}
+{% assign hero_background = page.hero %}
+{% else %}
+{% assign hero_background = "background-default" %}
+{% endif %}
+<header class="hero" style="background-image: url(/assets/{{ hero_background }}.jpg)">
+
+  <h1 class="text-center">{{ page.title }}</h1>
+
+</header>
