--- a/_jekyll/_layouts/page.html
+++ b/_jekyll/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section class="row support">
+<section class="row">
   <div class="small-12 medium-8 medium-offset-2 large-offset-2 end columns">
     {{ content }}
   </div>
