--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -50,7 +50,7 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #8119e8,
+  primary: #c00,
   secondary: #777,
   success: #3adb76,
   warning: #ffae00,
