--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,6 +1,93 @@
+nav {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    li {
+      margin: 0;
+      margin-left: 1.5em;
+      padding: 0;
+      display: inline-block;
+      a {
+//        font-family: sans-serif;
+        font-weight: 600;
+        font-size: 1.1em;
+      }
+    }
+  }
+}
 
+body > header.top {
+  background: rgba(250,250,250,0.8);
+  -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
+  height: 100px;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  position: fixed;
+  z-index: 1;
+  box-shadow: 0px 1px 1px rgba(0,0,0,0.1);
 
+  nav {
+    max-width: 800px;
+    margin: 0 auto;
+
+    ul {
+      float: right;
+      margin-top: 2.3em;
+      li {
+        a {
+          color: #aaa;
+          padding-bottom: 3px;
+          border-bottom: 4px solid rgba(255,255,255,0.5);
+        }
+      }
+    }
+  }
+}
+body > header.hero {
+  background-color: #ddd;
+  background-size: cover;
+  background-position: center top;
+  transition: padding-top 0.5s;
+  padding-top: 500px;
+  @media (min-width: 1300px) {
+    padding-top: 600px;
+  }
+  @media (min-width: 1600px) {
+    padding-top: 700px;
+  }
+  padding-bottom: 100px;
+  color: white;
+  h1 { color: white; text-shadow: 0px 2px 1px rgba(0,0,0,0.3); }
+  margin-bottom: 4rem;
+}
 
 body > footer {
+  background: #444;
+  margin-top: 5em;
   padding: 4rem;
+  color: #aaa;
+  nav {
+    margin-left: -1.5em;
+  }
+  a {
+    i.fa {
+      font-size: 2em;
+      vertical-align:-0.35rem;
+    }
+    &:hover { color: white; }
+    color: #ccc;
+    span {
+      text-decoration: underline;
+    }
+  }
+}
+
+h2.section {
+  font-size: 1.5em;
+  text-transform: uppercase;
+  border-bottom: 1px solid #999;
+  margin-bottom: 2rem;
 }
