Product view is working and showing cloudinary images and everything. Boo yeah!

--- a/_jekyll/_includes/head.html
+++ b/_jekyll/_includes/head.html
@@ -11,6 +11,8 @@
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
 
+  <link href="//fonts.googleapis.com/css?family=Stoke:300" rel="stylesheet" type="text/css">
+
   <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/css/fa/font-awesome.min.css" />
 
