--- a/_jekyll/_layouts/default.html
+++ b/_jekyll/_layouts/default.html
@@ -6,7 +6,7 @@
   </head>
   <body class="{{ page.layout }}{{ page.extra_page_class }}">
 
-    {% include header.html %}
+    {% include header.html hide_hero=layout.hide_hero %}
 
     {{ content }}
 
