--- a/_jekyll/_includes/header.html
+++ b/_jekyll/_includes/header.html
@@ -1,24 +1,29 @@
 <header class="top">
 
   <nav>
-    <a href="/"><img src="/assets/jekyll-logo.png" style="width: 200px" alt="Website Logo" /></a>
-
+    <h1><a href="/"><span class="logo"><img src="https://d3jpl91pxevbkh.cloudfront.net/mariposta/image/upload/a_exif,c_fill,g_face,h_180,q_75,w_180/imuc5urhnfww6m1005na.png" alt=""></span>Geoffrey Ellis Flutes</a></h1>
+<!-- Boehm Head Joints, Irish Flutes, World Flutes, Blog, Newsletter -->
     <ul>
-      <li><a href="/#">Link 1</a></li>
-      <li><a href="/#">Link 2</a></li>
-      <li><a href="/#">Link 3</a></li>
-      <li><a href="/about">About</a></li>
+      <li><a href="/#">Boehm Head Joints</a></li>
+      <li><a href="/#">Irish Flutes</a></li>
+      <li><a href="/#">World Flutes</a></li>
+      <li><a href="/blog">Blog</a></li>
+      <li><a href="/newsletter">Newsletter</a></li>
     </ul>
   </nav>
 
 </header>
-{% if page.hero %}
-{% assign hero_background = page.hero %}
+{% unless include.hide_hero %}
+  {% if page.hero %}
+  {% assign hero_background = page.hero %}
+  {% else %}
+  {% assign hero_background = "background-default" %}
+  {% endif %}
+  <header class="hero" style="background-image: url(/assets/{{ hero_background }}.jpg)">
+
+    <h1 class="text-center">{{ page.title }}</h1>
+
+  </header>
 {% else %}
-{% assign hero_background = "background-default" %}
-{% endif %}
-<header class="hero" style="background-image: url(/assets/{{ hero_background }}.jpg)">
-
-  <h1 class="text-center">{{ page.title }}</h1>
-
-</header>
+  <div style="height:180px"></div>
+{% endunless %}
