--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -17,11 +17,17 @@ nav {
   }
 }
 
+body {
+  background-image: url(https://s3-us-west-1.amazonaws.com/mptheme-custom-ellisflutes-v3/images/background_leather.jpg);
+}
+
 body > header.top {
-  background: rgba(250,250,250,0.8);
+  background: #292624;
+  background: linear-gradient(to bottom, rgba(55, 39, 16, 0.79), rgba(55, 39, 16, 0.95));
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
-  height: 100px;
+  height: 140px;
   top: 0px;
   left: 0px;
   right: 0px;
@@ -32,15 +38,29 @@ body > header.top {
   nav {
     max-width: 800px;
     margin: 0 auto;
+    text-align: center;
+
+    h1 {
+      margin-top: 0.6rem;
+      margin-bottom: 0;
+      font-size: 2.5rem;
+      font-family: 'Stoke', serif;
+      .logo img {
+        width: 80px;
+        margin-right: 0.2em;
+      }
+      a {
+        color: white;
+      }
+    }
 
     ul {
-      float: right;
-      margin-top: 2.3em;
+      margin-top: 0.3em;
       li {
         a {
-          color: #aaa;
+          color: #ffeedd;
           padding-bottom: 3px;
-          border-bottom: 4px solid rgba(255,255,255,0.5);
+          border-bottom: 4px solid rgba(255,255,255,0.25);
         }
       }
     }
@@ -65,7 +85,7 @@ body > header.hero {
 }
 
 body > footer {
-  background: #444;
+  background: #333;
   margin-top: 5em;
   padding: 4rem;
   color: #aaa;
