--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -59,11 +59,11 @@ $foundation-palette: (
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
-$black: #0a0a0a;
+$black: #222;
 $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
