Bunch o' shopping cart stuff

--- a/_jekyll/_includes/head.html
+++ b/_jekyll/_includes/head.html
@@ -9,14 +9,16 @@
     <script src="/js/html5shiv.js"></script>
   <![endif]-->
 
-  <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml" />
 
-  <link href="//fonts.googleapis.com/css?family=Stoke:300" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Stoke:300" rel="stylesheet" type="text/css" />
+  <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/cee05211-2d22-4d38-9433-3add7b859771.css" />
 
+  <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/css/app.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/css/fa/font-awesome.min.css" />
 
   <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
-
+  <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="ODQyYjc4MmQtZjQxMC00YTUzLWI1MjYtZmQ5ZDM5NmIyYzQ3NjM2NDI3MjUwMDM5Mzg4MjUy" id="snipcart"></script>
   <script src="{{ site.baseurl }}/js/foundation.js"></script>
   <script src="{{ site.baseurl }}/js/app.js"></script>
