--- a/_jekyll/_includes/header.html
+++ b/_jekyll/_includes/header.html
@@ -1,4 +1,5 @@
 <header class="top">
+  <div id="cart-action"><a id="cart-icon" href="#" onclick="Snipcart.api.modal.show();return false"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Cart <span class="item-count"></span></a></div>
 
   <nav>
     <h1><a href="/"><span class="logo"><img src="https://d3jpl91pxevbkh.cloudfront.net/mariposta/image/upload/a_exif,c_fill,g_face,h_180,q_75,w_180/imuc5urhnfww6m1005na.png" alt=""></span>Geoffrey Ellis Flutes</a></h1>
