--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -35,6 +35,19 @@ body > header.top {
   z-index: 1;
   box-shadow: 0px 1px 1px rgba(0,0,0,0.1);
 
+  #cart-action {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    padding: 5px 20px;
+    border-radius: 20px;
+    background: lighten(map-get($foundation-palette, primary), 5%);
+    #cart-icon {
+      font-size: 1.3rem;
+      color: white;
+    }
+  }
+
   nav {
     max-width: 800px;
     margin: 0 auto;
