--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,3 +1,58 @@
+.max-text {
+  p, h3 {
+    max-width: 35rem;
+  }
+  @media (min-width: 1250px) {
+    h3 {
+      margin-top: 3rem;
+    }
+  }
+  @media (min-width: 1550px) {
+    h3 {
+      margin-top: 5rem;
+    }
+  }
+
+  &.with-left-space {
+    p, h3 {
+      margin-left: auto;
+    }
+  }
+  &.with-right-space {
+  }
+}
+
+@media (min-width: 1550px) {
+  p {
+    font-size: 1.2rem;
+  }
+  h1 {
+    font-size: 3rem;
+  }
+  h3 {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 1625px) {
+  .max-text {
+    &.with-left-space {
+      p, h3 {
+        margin-left: auto;
+        margin-right: 3rem;
+      }
+    }
+    &.with-right-space {
+      p, h3 {
+        margin-left: 3rem;
+      }
+    }
+  }
+}
+
+
+
+
 nav {
   ul {
     list-style-type: none;
