All kinds of new awesome store stuff

--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -1,46 +1,34 @@
 <footer>
-  <div class="row">
-    <div class="columns large-2 medium-3">
-      <img src="/assets/jekyll-logo.png" alt="" style="width:118px;opacity:0.5" />
+
+<div class="row">
+<div class="columns medium-6 contact-links">
+
+<h4>Geoffrey Ellis Flutes</h4>
+
+<p>
+<a href="mailto:ellisflutes@gmail.com"><i class="fa fa-envelope-o"></i> <span>ellisflutes@gmail.com</span></a>
+<br/>
+<a href="https://www.facebook.com/Geoffrey-Ellis-Flutes-Page-1435853706443576/"><i class="fa fa-facebook"></i> <span>Facebook</span></a>
+</p>
+
+<p><a href="/terms"><i class="fa fa-file-text-o"></i> <span>Terms of Service</span></a></p>
+</div>
+<div class="columns medium-6">
+  <br/><br/>
+  <form class="subscribe-newsletter" action="http://mariposta.createsend.com/t/r/s/pdthjd/" method="post">
+    <div>
+      <label for="name">Name:</label>  <input id="name" type="text" name="cm-name">
+      <label for="pdthjd-pdthjd">Email:</label>  <input id="pdthjd-pdthjd" type="text" name="cm-pdthjd-pdthjd">
+      <input type="submit" value="Subscribe to Updates" class="button">
     </div>
-    <div class="columns large-10 medium-9">
-      <br/>
+  </form>
+</div>
+</div>
 
-      <nav>
-        <ul>
-          <li><a href="/#">Secondary Link 1</a></li>
-          <li><a href="/#">Link 2</a></li>
-          <li><a href="/#">Link 3</a></li>
-          <li><a href="/#">Link 4</a></li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-
-  <br/>
-
-  <div class="row">
-    <div class="columns large-offset-2 large-8 medium-6 medium-offset-3">
-
-      <p>
-        Whitefusion<br/>
-        12345 NW Anywhere Ave<br/>
-        Portland, OR 97124
-        <br/>
-        <br/>
-        <small>Copyright © 2017 Whitefusion<br/>
-        Photography by Jared White</small>
-      </p>
-
-    </div>
-
-    <div class="columns large-2 medium-3">
-      <p>Find us on:</p>
-
-      <div><a href="https://www.facebook.com/whitefusionfoundry/" target="_blank">&nbsp;<i class="fa fa-facebook" aria-hidden="true"></i>&nbsp; <strong>Facebook</strong></a></div>
-
-      <div style="margin-top:0.5em"><a href="https://twitter.com/_whitefusion/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i> <strong>Twitter</strong></a></div>
-    </div>
-
-  </div>
 </footer>
+
+<!-- open/close -->
+<div class="overlay overlay-scale">
+  <button type="button" class="overlay-close">Close</button>
+  {% include nav.html %}
+</div>
