--- a/_jekyll/_includes/head.html
+++ b/_jekyll/_includes/head.html
@@ -21,4 +21,5 @@
   <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="ODQyYjc4MmQtZjQxMC00YTUzLWI1MjYtZmQ5ZDM5NmIyYzQ3NjM2NDI3MjUwMDM5Mzg4MjUy" id="snipcart"></script>
   <script src="{{ site.baseurl }}/js/foundation.js"></script>
+  <script src="{{ site.baseurl }}/js/modernizr.custom.js"></script>
   <script src="{{ site.baseurl }}/js/app.js"></script>
