--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -2,14 +2,14 @@
   p, h3 {
     max-width: 35rem;
   }
-  @media (min-width: 1250px) {
+  @media (min-width: 1100px) {
     h3 {
       margin-top: 3rem;
     }
   }
   @media (min-width: 1550px) {
     h3 {
-      margin-top: 5rem;
+      margin-top: 7rem;
     }
   }
 
@@ -19,6 +19,12 @@
     }
   }
   &.with-right-space {
+  }
+}
+
+@media (min-width: 900px) {
+  .button.hollow.white {
+    font-size: 1.05em;
   }
 }
 
@@ -50,8 +56,9 @@
   }
 }
 
-
-
+hr {
+  width: 100px;
+}
 
 nav {
   ul {
@@ -152,22 +159,22 @@ body > header.hero {
 }
 
 body > footer {
-  background: #333;
-  margin-top: 5em;
   padding: 4rem;
-  color: #aaa;
-  nav {
-    margin-left: -1.5em;
+  h4 {
+    margin-bottom: 1rem;
+  }
+  .contact-links p {
+    line-height: 2.3;
   }
   a {
     i.fa {
-      font-size: 2em;
-      vertical-align:-0.35rem;
+      font-size: 1.5em;
+      vertical-align:-0.15rem;
+      width: 1.7rem;
+      text-align: center;
     }
-    &:hover { color: white; }
-    color: #ccc;
     span {
-      text-decoration: underline;
+      border-bottom: 3px solid transparentize(map-get($foundation-palette, primary), 0.8);
     }
   }
 }
@@ -182,3 +189,143 @@ h2.section {
 button, input, optgroup, select, textarea {
   font-family: $body-font-family !important;
 }
+
+
+/* From https://tympanus.net/Development/FullscreenOverlayStyles/index5.html */
+/* Overlay style */
+.overlay {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: transparentize(map-get($foundation-palette, secondary), .1);
+  z-index: 10000;
+}
+
+/* Overlay closing cross */
+.overlay .overlay-close {
+	width: 80px;
+	height: 80px;
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	overflow: hidden;
+	border: none;
+	background: url(/assets/cross.png) no-repeat center center;
+	text-indent: 200%;
+	color: transparent;
+	outline: none;
+	z-index: 100;
+  cursor: pointer;
+}
+
+/* Menu style */
+.overlay nav {
+	text-align: center;
+	position: relative;
+	top: 50%;
+	height: 70%;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+.overlay ul {
+	list-style: none;
+	padding: 0;
+	margin: 0 auto;
+	display: inline-block;
+	height: 100%;
+	position: relative;
+}
+
+.overlay ul li {
+	display: block;
+	height: 14%;
+	height: calc(100% / 7);
+	min-height: 54px;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+  margin-left: 0;
+}
+
+.overlay ul li a {
+	font-size: 44px;
+	font-weight: 300;
+	display: block;
+	color: #fff;
+	-webkit-transition: color 0.2s;
+	transition: color 0.2s;
+}
+
+.overlay ul li a:hover,
+.overlay ul li a:focus {
+	color: #f0f0f0;
+}
+
+/* Effects */
+.overlay-scale {
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transform: scale(0.9);
+	transform: scale(0.9);
+	-webkit-transition: -webkit-transform 0.2s, opacity 0.2s, visibility 0s 0.2s;
+	transition: transform 0.2s, opacity 0.2s, visibility 0s 0.2s;
+  transform-origin: 50% 0%;
+}
+
+.overlay-scale.open {
+	visibility: visible;
+	opacity: 1;
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: -webkit-transform 0.4s, opacity 0.4s;
+	transition: transform 0.4s, opacity 0.4s;
+}
+
+@media screen and (max-height: 30.5em) {
+	.overlay nav {
+		height: 70%;
+		font-size: 34px;
+	}
+	.overlay ul li {
+		min-height: 34px;
+	}
+}
+
+
+
+/* Slidehow */
+
+.slideshow-container {
+  height: 500px;
+  height: 79vw;
+  overflow: hidden;
+  position: relative;
+  border-bottom: 6px solid #f1c363;
+}
+/* @media (max-width: 600px) {
+  .slideshow-container {
+    height: 70vw;
+  }
+} */
+#cycler{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+#cycler figure{
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  left :0;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  display: none;
+  background-size: cover;
+  background-position: center top;
+}
+#cycler figure.active{z-index:3}
+#cycler figure.base{z-index:-1;position:static;display:block}
