--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -1,20 +1,70 @@
-header#logo-and-name {
+nav#menu {
+  text-align: center;
+  padding-top: 0.5em;
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+  &.snipcart-print-no-show {
+    z-index: 1;
+  }
+  .item-count {
+    position:absolute;background:red;border-radius:50% ;color:white;font-family: sans-serif;font-weight:bold;font-size: 13px;width: 20px;height:20px;display:inline-block;margin-top:1em;margin-left:-1em;
+    transition: transform 0.8s;
+    &.empty {
+      display: none;
+    }
+  }
+  & > a > div {
+    font-family:sans-serif;
+    font-weight:bold;
+    font-size:11px;
+    position:absolute;
+    top: 80px;
+    left:50%;
+    margin-left:-2em;
+    color:white;
+    text-shadow: 1px 1px 1px #18677f;
+    opacity: 0;
+    transition: opacity 2s;
+    z-index: -1;
+  }
+  &.smaller {
+    & > a > div {
+      opacity: 1;
+    }
+    .item-count {
+      transform: translate(-22px, -6px)
+    }
+  }
+}
+
+
+img.logo {
+  padding: 2px;
+  background: transparentize($body-background, 0.5);
+  box-shadow: 0px 0px 10px $body-background;
+  border-radius: 50%;
+  width: 131px;
+  vertical-align: middle;
+  transition: transform 0.8s;
+  transform-origin: 50% 0%;
+  nav#menu.smaller & {
+    transform: scale(0.5);
+  }
+}
+
+header#page-title {
   padding: 5rem 0;
-  padding-top: 25vh;
+  padding-top: 35vh;
   padding-bottom: 25vh;
   @media (max-width: map-get($breakpoints, medium)) {
-    padding-top: 15vh;
-    padding-bottom: 15vh;
+    padding-top: 27vh;
+    padding-bottom: 10vh;
   }
-  h1 img {
-    width:127px;
-    vertical-align: middle;
-    margin-right: 1rem;
-    @media (max-width: map-get($breakpoints, medium)) {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 0.75rem;
+  @media (min-width: 47.9375em) {
+    h1 {
+      font-size: 3rem;
     }
   }
 }
@@ -64,7 +114,7 @@ div.blue-tag {
   position: absolute;
   right: 0;
   padding: 1rem;
-  margin-top: 2.5rem;
+  bottom: 2.5rem;
   z-index: 1;
   max-width: 18rem;
   font-style: italic;
@@ -109,11 +159,11 @@ div.columns.top-padding {
 
 /* ** Animations ** */
 
-header#logo-and-name {
+header#page-title {
         -ms-animation: fadein 2s; /* Internet Explorer */
             animation: fadein 2s;
 }
-header#logo-and-name + div, .image-bottom-bordered {
+.fade-on-load {
   -ms-animation: fadein 3s; /* Internet Explorer */
       animation: fadein 3s;
 }
