Lots of new content updates and layout tweaks

--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -14,7 +14,14 @@
 <p><a href="/terms"><i class="fa fa-file-text-o"></i> <span>Terms of Service</span></a></p>
 </div>
 <div class="columns medium-6">
-  <br/><br/>
+  <p>
+    <a href="/boehm-head-joints" class="button hollow">Boehm Head Joints</a>
+    &nbsp;
+    <a href="/irish-flutes" class="button hollow">Irish Flutes</a>
+    &nbsp;
+    <a href="/world-flutes" class="button hollow">World Flutes</a>
+  </p>
+
   <form class="subscribe-newsletter" action="http://mariposta.createsend.com/t/r/s/pdthjd/" method="post">
     <div>
       <label for="name">Name:</label>  <input id="name" type="text" name="cm-name">
