--- a/_jekyll/_includes/nav.html
+++ b/_jekyll/_includes/nav.html
@@ -3,8 +3,8 @@
     <li><a href="/">Home</a></li>
     <li><a href="#" onclick="$('button.overlay-close').click();Snipcart.api.modal.show();return false"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Checkout</a></li>
     <li><a href="/boehm-head-joints">Boehm Head Joints</a></li>
-    <li><a href="/#">Irish Flutes</a></li>
-    <li><a href="/#">World Flutes</a></li>
+    <li><a href="/irish-flutes">Irish Flutes</a></li>
+    <li><a href="/world-flutes">World Flutes</a></li>
     <li><a href="/about">About Geoffrey</a></li>
     <li><a href="/blog">Blog</a></li>
   </ul>
