--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -117,7 +117,7 @@ $header-styles: (
     'h1': ('font-size': 44),
     'h2': ('font-size': 38),
     'h3': ('font-size': 30),
-    'h4': ('font-size': 22),
+    'h4': ('font-size': 28),
     'h5': ('font-size': 20),
     'h6': ('font-size': 16),
   ),
@@ -125,7 +125,7 @@ $header-styles: (
     'h1': ('font-size': 48),
     'h2': ('font-size': 40),
     'h3': ('font-size': 31),
-    'h4': ('font-size': 25),
+    'h4': ('font-size': 28),
     'h5': ('font-size': 20),
     'h6': ('font-size': 16),
   ),
@@ -158,9 +158,9 @@ $list-nested-side-margin: 1.25rem;
 $defnlist-margin-bottom: 1rem;
 $defnlist-term-weight: $global-weight-bold;
 $defnlist-term-margin-bottom: 0.3rem;
-$blockquote-color: $dark-gray;
+$blockquote-color: $body-font-color;
 $blockquote-padding: rem-calc(9 20 0 19);
-$blockquote-border: 1px solid $medium-gray;
+$blockquote-border: 5px solid #f1c363;
 $cite-font-size: rem-calc(13);
 $cite-color: $dark-gray;
 $cite-pseudo-content: '\2014 \0020';
