improvements to the footer

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -162,6 +162,19 @@ body > footer {
   background: rgba(255, 255, 255, 0.75);
   padding: 4rem;
 
+  @media (max-width: 1085px) {
+    padding: 4rem 1rem;
+  }
+
+  .links-and-signup {
+    @media (min-width: 768px) {
+      padding-left: 0;
+    }
+    @media (max-width: 767px) {
+      padding-top: 1rem;
+    }
+  }
+
   h4 {
     margin-bottom: 1rem;
   }
