--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -13,7 +13,7 @@
 
 <p><a href="/terms"><i class="fa fa-file-text-o"></i> <span>Terms of Service</span></a></p>
 </div>
-<div class="columns medium-6">
+<div class="columns medium-6 links-and-signup">
   <p>
     <a href="/boehm-head-joints" class="button hollow">Boehm Head Joints</a>
     &nbsp;
