cart and footer tweaks

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -187,6 +187,7 @@ body > footer {
       vertical-align:-0.15rem;
       width: 1.7rem;
       text-align: center;
+      margin-right: 0.15rem;
     }
     span {
       border-bottom: 3px solid transparentize(map-get($foundation-palette, primary), 0.8);
