--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -8,6 +8,9 @@
 .snip-layout .snip-header__total {
   background: lighten(map-get($foundation-palette, primary), 10%);
 }
+.snip-layout .snip-header__title {
+  color: white;
+}
 .snip-layout .snip-header__total-label {
   color: lighten(map-get($foundation-palette, primary), 60%);
 }
