--- a/_jekyll/_includes/nav.html
+++ b/_jekyll/_includes/nav.html
@@ -6,6 +6,6 @@
     <li><a href="/irish-flutes">Irish Flutes</a></li>
     <li><a href="/world-flutes">World Flutes</a></li>
     <li><a href="/about">About Geoffrey</a></li>
-    <li><a href="/blog">Blog</a></li>
+    <li><a href="/blog">Shop Notes Blog</a></li>
   </ul>
 </nav>
