--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -142,7 +142,7 @@ body.about {
   h1 {
     color: white;
     width: 60%;
-    margin-left: auto;
+    margin-left: auto !important;
     margin-bottom: 4rem;
     text-shadow: 1px 2px 1px rgba(0,0,0,0.3);
     line-height: 1;
