--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -55,7 +55,8 @@ $foundation-palette: (
   success: #3adb76,
   warning: #ffae00,
   alert: #ec5840,
-  white: #ffffff
+  white: #ffffff,
+  goldish: #f1c363
 );
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
