--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -197,7 +197,7 @@ body > footer {
     border: 1px solid map-get($foundation-palette, primary);
   }
 }
-body.spaced-footer, body.page {
+body.spaced-footer, body.page, body.post {
   & > footer {
     margin-top: 6rem;
   }
