--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -2,8 +2,8 @@ nav#menu {
   text-align: center;
   padding-top: 0.5em;
   position: fixed;
-  left: 0;
-  right: 0;
+  left: 50%;
+  margin-left: -65px;
   z-index: 9999;
   &.snipcart-print-no-show {
     z-index: 1;
@@ -15,10 +15,13 @@ nav#menu {
       display: none;
     }
   }
+  & > a {
+    display: inline-block;
+  }
   & > a > div {
     font-family:sans-serif;
     font-weight:bold;
-    font-size:11px;
+    font-size:15px;
     position:absolute;
     top: 80px;
     left:50%;
@@ -67,6 +70,11 @@ header#page-title {
       font-size: 3rem;
     }
   }
+
+  h1, h2 {
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+  }
 }
 
 div.amber {
@@ -99,6 +107,9 @@ div.blue {
   a {
     color: inherit;
     border-bottom: 3px solid rgba(255,255,255,0.5);
+    &.no-border {
+      border-bottom: none;
+    }
   }
   .right-col-background {
     background: #11495a;
