Bunch o' updates to Geoffrey's site

--- a/_jekyll/_includes/footer.html
+++ b/_jekyll/_includes/footer.html
@@ -3,7 +3,7 @@
 <div class="row">
 <div class="columns medium-6 contact-links">
 
-<h4>Geoffrey Ellis Flutes</h4>
+<h4><a href="/">Geoffrey Ellis Flutes</a></h4>
 
 <p>
 <a href="mailto:ellisflutes@gmail.com"><i class="fa fa-envelope-o"></i> <span>ellisflutes@gmail.com</span></a>
@@ -15,7 +15,7 @@
 </div>
 <div class="columns medium-6 links-and-signup">
   <p>
-    <a href="/boehm-head-joints" class="button hollow">Boehm Head Joints</a>
+    <a href="/headjoints" class="button hollow">Ellis-Korb Headjoints</a>
     &nbsp;
     <a href="/irish-flutes" class="button hollow">Irish Flutes</a>
     &nbsp;
