--- a/_jekyll/_layouts/page.html
+++ b/_jekyll/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
 </header>
 
 <section class="row fade-on-load">
-  <div class="small-12 medium-8 medium-offset-2 large-offset-2 end columns">
+  <div id="content" class="medium-8 medium-offset-2 columns">
     {{ content }}
   </div>
 </section>
