--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -1,10 +1,14 @@
-body.post {
+body.post, body.page {
   #content {
     background: white;
     padding: 75px;
+    @include breakpoint(small down) {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
     &, p { color: #124c5d; }
 
-    h3 {
+    h3#shopnotes {
       text-transform: uppercase;
       margin-bottom: -1.7rem;
       margin-top: -1rem;
@@ -18,6 +22,22 @@ body.post {
         border-top-left-radius: 3px;
         border-bottom-right-radius: 3px;
         box-shadow: 0px 3px 5px rgba(0,0,0,0.5);
+      }
+    }
+
+    h3:not(#shopnotes) {
+      margin-top: 3rem;
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+
+    .post-image {
+      margin-left: -20px;
+      margin-right: -20px;
+      margin-bottom: 4rem;
+
+      img {
+        border: 6px solid #f1c363;
       }
     }
   }
