--- a/scss/_pages.scss
+++ b/scss/_pages.scss
@@ -170,6 +170,10 @@ body.about {
     width: 40%;
     margin-left: auto;
     margin-right: 10%;
+    @include breakpoint(small down) {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
 
     @media (max-width: 1300px) {
       width: 50%;
