--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -142,6 +142,13 @@ div.blue-tag {
     color: inherit;
     border-bottom: 3px solid rgba(255,255,255,0.5);
   }
+  &.static {
+    position: static;
+    border-bottom: 6px solid #f1c363;
+    max-width: 100%;
+    margin-top: 0;
+    text-align: center;
+  }
 }
 
 div.no-para-margin, div.blue-tag {
@@ -171,6 +178,41 @@ div.columns.top-padding {
     border-bottom-style: double;
   }
 }
+
+/* Slidehow */
+
+.slideshow-container {
+  height: 500px;
+  height: 79vw;
+  overflow: hidden;
+  position: relative;
+//  border-bottom: 6px solid #f1c363;
+}
+/* @media (max-width: 600px) {
+  .slideshow-container {
+    height: 70vw;
+  }
+} */
+#cycler{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+#cycler figure{
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  left :0;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  display: none;
+  background-size: cover;
+  background-position: center top;
+}
+#cycler figure.active{z-index:3}
+#cycler figure.base{z-index:-1;position:static;display:block}
 
 /* ** Animations ** */
 
