--- a/_jekyll/_includes/head.html
+++ b/_jekyll/_includes/head.html
@@ -1,5 +1,5 @@
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   {% capture page_title %}{{ page.title }}{% endcapture %}
   <title>{% if page_title != "" %}{{ page_title | escape }} | {{ site.title | escape }}{% else %}{{ site.title | escape }} | {{ site.tagline | escape }}{% endif %}</title>
 
